Generate Domino CLI SBOM config in case generate-domino-cli-config property has value true